--- a/account-web/.settings/org.eclipse.wst.common.component
+++ b/account-web/.settings/org.eclipse.wst.common.component
@@ -12,6 +12,9 @@
         <dependent-module archiveName="mirage-util-1.0.0.jar" deploy-path="/WEB-INF/lib" handle="module:/resource/mirage-util/mirage-util">
             <dependency-type>uses</dependency-type>
         </dependent-module>
+        <dependent-module archiveName="mybatisPlugin-1.0.0.jar" deploy-path="/WEB-INF/lib" handle="module:/resource/mybatisPlugin/mybatisPlugin">
+            <dependency-type>uses</dependency-type>
+        </dependent-module>
         <dependent-module archiveName="account-email-1.0.0-SNAPSHOT.jar" deploy-path="/WEB-INF/lib" handle="module:/resource/account-email/account-email">
             <dependency-type>uses</dependency-type>
         </dependent-module>
